--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -14,19 +14,18 @@ data:
   map.client-secret: client_secret
 
   gen.cookie-secret: "true"
-# --- 1. RBAC: Permissions for this Namespace Only ---
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: secret-sync-sa
-  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: secret-sync-role
-  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
@@ -39,7 +38,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: secret-sync-binding
-  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system
 subjects:
   - kind: ServiceAccount
     name: secret-sync-sa
@@ -48,12 +47,11 @@ roleRef:
   name: secret-sync-role
   apiGroup: rbac.authorization.k8s.io
 ---
-# --- 2. THE CONTROLLER: CronJob Loop ---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: secret-sync-controller
-  namespace: flux-system # <--- CHANGE THIS PER NAMESPACE
+  namespace: flux-system
 spec:
   schedule: "* * * * *"
   successfulJobsHistoryLimit: 1
