--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -47,6 +47,113 @@ roleRef:
   name: secret-sync-role
   apiGroup: rbac.authorization.k8s.io
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: secret-sync-script
+  namespace: flux-system
+data:
+  sync.sh: |
+    #!/usr/bin/env bash
+    set -euo pipefail
+    trap 'echo "Error on line $LINENO. Last command: $BASH_COMMAND"' ERR
+
+    NS=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
+    echo "--- Running in Namespace: $NS ---"
+
+    # 1. DISCOVER
+    CONFIGS=$(kubectl get configmaps -n "$NS" -l secret-sync.controller/enabled=true -o json)
+    COUNT=$(echo "$CONFIGS" | jq '.items | length')
+
+    if [[ "$COUNT" -eq 0 ]]; then
+      echo "No sync configs found."
+      exit 0
+    fi
+
+    for ((i=0; i<COUNT; i++)); do
+      ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
+      NAME=$(echo "$ITEM" | jq -r ".metadata.name")
+      CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
+      SRC=$(echo "$ITEM" | jq -r ".data.sourceSecret // empty")
+      TGT=$(echo "$ITEM" | jq -r ".data.targetSecret // empty")
+
+      if [[ -z "$SRC" || -z "$TGT" ]]; then
+         echo "Skipping '$NAME': Missing source/target."
+         continue
+      fi
+
+      echo "Syncing '$NAME': $SRC -> $TGT"
+
+      # 2. PARSE CONFIG
+      KEYS=$(echo "$ITEM" | jq -c '(.data // {}) | to_entries | map(select(.key | startswith("map."))) | map({key: .key | sub("map\\.";""), value: .value}) | from_entries' || echo "{}")
+      GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '(.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
+
+      # 3. HANDLE GENERATORS
+      TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
+      GEN_JSON="{}"
+
+      if [[ -n "$GEN_KEYS_LIST" ]]; then
+        for key in $GEN_KEYS_LIST; do
+          EXISTING=""
+          if [[ -n "$TGT_JSON" ]]; then
+            EXISTING=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty')
+          fi
+
+          if [[ -n "$EXISTING" ]]; then
+             VAL="$EXISTING"
+          else
+             # Safe Random Gen
+             RAW=$(head -c 512 /dev/urandom | LC_ALL=C tr -dc 'A-Za-z0-9' | head -c 32)
+             VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
+          fi
+          GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
+        done
+      fi
+
+      # 4. GET SOURCE
+      SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
+      if [[ -z "$SRC_JSON" ]]; then
+        echo "  Source '$SRC' missing. Waiting..."
+        continue
+      fi
+
+      # 5. BUILD PROPOSED
+      PROPOSED=$(echo "$SRC_JSON" | jq -c --arg name "$TGT" \
+                           --arg ns "$NS" \
+                           --arg cm_name "$NAME" \
+                           --arg cm_uid "$CM_UID" \
+                           --argjson map "$KEYS" \
+                           --argjson gen "$GEN_JSON" '
+        .data = (.data // {}) |
+        .metadata = {
+          "name": $name,
+          "namespace": $ns,
+          "annotations": { "secret-sync.controller/managed": "true" },
+          "ownerReferences": [{
+             "apiVersion": "v1",
+             "kind": "ConfigMap",
+             "name": $cm_name,
+             "uid": $cm_uid,
+             "blockOwnerDeletion": true,
+             "controller": true
+          }]
+        } |
+        reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
+        reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
+        reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
+        .data |= with_entries(select(.value != null))
+      ')
+
+      # 6. APPLY
+      if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
+         echo "$PROPOSED" | kubectl apply -f -
+         echo "  Synced successfully."
+      else
+         echo "  No changes."
+      fi
+    done
+
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -66,98 +173,19 @@ spec:
           containers:
             - name: controller
               image: bitnami/kubectl:latest
-              command: ["/bin/bash", "-c"]
-              args:
-                - |
-                  # Robust Error Trapping
-                  set -euo pipefail
-                  trap 'echo "Error on line $LINENO. Last command: $BASH_COMMAND"' ERR
-
-                  NS=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
-                  echo "--- Running in Namespace: $NS ---"
-
-                  CONFIGS=$(kubectl get configmaps -n "$NS" -l secret-sync.controller/enabled=true -o json)
-                  COUNT=$(echo "$CONFIGS" | jq '.items | length')
-
-                  if [[ "$COUNT" -eq 0 ]]; then
-                    echo "No sync configs found."
-                    exit 0
-                  fi
-
-                  for ((i=0; i<COUNT; i++)); do
-                    ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
-                    NAME=$(echo "$ITEM" | jq -r ".metadata.name")
-                    CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
-                    SRC=$(echo "$ITEM" | jq -r ".data.sourceSecret // empty")
-                    TGT=$(echo "$ITEM" | jq -r ".data.targetSecret // empty")
-
-                    if [[ -z "$SRC" || -z "$TGT" ]]; then
-                      echo "Skipping '$NAME': Missing source/target."
-                      continue
-                    fi
-
-                    echo "Syncing '$NAME': $SRC -> $TGT"
-
-                    KEYS=$(echo "$ITEM" | jq -c '(.data // {}) | to_entries | map(select(.key | startswith("map."))) | map({key: .key | sub("map\\.";""), value: .value}) | from_entries' || echo "{}")
-                    GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '(.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
-
-                    TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
-                    GEN_JSON="{}"
-
-                    if [[ -n "$GEN_KEYS_LIST" ]]; then
-                      for key in $GEN_KEYS_LIST; do
-                        EXISTING=""
-                        if [[ -n "$TGT_JSON" ]]; then
-                          EXISTING=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty')
-                        fi
-
-                        if [[ -n "$EXISTING" ]]; then
-                          VAL="$EXISTING"
-                        else
-                          # FIX IS HERE: Read fixed chunk -> Filter -> Cut
-                          RAW=$(head -c 512 /dev/urandom | LC_ALL=C tr -dc 'A-Za-z0-9' | head -c 32)
-                          VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
-                        fi
-                        GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
-                      done
-                    fi
-
-                    SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
-                    if [[ -z "$SRC_JSON" ]]; then
-                      echo "  Source '$SRC' missing. Waiting..."
-                      continue
-                    fi
-
-                    PROPOSED=$(echo "$SRC_JSON" | jq -c --arg name "$TGT" \
-                                        --arg ns "$NS" \
-                                        --arg cm_name "$NAME" \
-                                        --arg cm_uid "$CM_UID" \
-                                        --argjson map "$KEYS" \
-                                        --argjson gen "$GEN_JSON" '
-                      .data = (.data // {}) |
-                      .metadata = {
-                        "name": $name,
-                        "namespace": $ns,
-                        "annotations": { "secret-sync.controller/managed": "true" },
-                        "ownerReferences": [{
-                          "apiVersion": "v1",
-                          "kind": "ConfigMap",
-                          "name": $cm_name,
-                          "uid": $cm_uid,
-                          "blockOwnerDeletion": true,
-                          "controller": true
-                        }]
-                      } |
-                      reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
-                      reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
-                      reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
-                      .data |= with_entries(select(.value != null))
-                    ')
-
-                    if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
-                      echo "$PROPOSED" | kubectl apply -f -
-                      echo "  Synced successfully."
-                    else
-                      echo "  No changes."
-                    fi
-                  done
+              command: ["/bin/bash", "/scripts/sync.sh"]
+              resources:
+                requests:
+                  cpu: 10m
+                  memory: 32Mi
+                limits:
+                  cpu: 200m
+                  memory: 128Mi
+              volumeMounts:
+                - name: scripts
+                  mountPath: /scripts
+          volumes:
+            - name: scripts
+              configMap:
+                name: secret-sync-script
+                defaultMode: 0755
