--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -58,101 +58,108 @@ data:
     set -euo pipefail
     trap 'echo "Error on line $LINENO. Last command: $BASH_COMMAND"' ERR
 
-    NS=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
-    echo "--- Running in Namespace: $NS ---"
+    JQ_EXTRACT_MAP='(.data // {}) | to_entries
+      | map(select(.key | startswith("map.")))
+      | map({key: .key | sub("map\\.";""), value: .value})
+      | from_entries'
+
+    JQ_EXTRACT_GEN='(.data // {}) | keys[]
+      | select(startswith("gen."))
+      | sub("gen\\.";"")'
+
+    JQ_BUILD_PROPOSED='
+      .data = (.data // {}) |
+      .metadata = {
+        "name": $ARGS.named.target,
+        "namespace": $ARGS.named.ns,
+        "annotations": { "secret-sync.controller/managed": "true" },
+        "ownerReferences": [{
+          "apiVersion": "v1", "kind": "ConfigMap",
+          "name": $ARGS.named.cm_name, "uid": $ARGS.named.cm_uid,
+          "blockOwnerDeletion": true, "controller": true
+        }]
+      } |
+      reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
+      reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
+      reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
+      .data |= with_entries(select(.value != null))
+    '
+
+    NS="${CURRENT_NAMESPACE:-$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)}"
+    echo "--- Syncing Namespace: $NS ---"
 
     # 1. DISCOVER
     CONFIGS=$(kubectl get configmaps -n "$NS" -l secret-sync.controller/enabled=true -o json)
     COUNT=$(echo "$CONFIGS" | jq '.items | length')
 
     if [[ "$COUNT" -eq 0 ]]; then
-      echo "No sync configs found."
+      echo "No configurations found."
       exit 0
     fi
 
+    # 2. PROCESS LOOP
     for ((i=0; i<COUNT; i++)); do
       ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
+
       NAME=$(echo "$ITEM" | jq -r ".metadata.name")
       CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
       SRC=$(echo "$ITEM" | jq -r ".data.sourceSecret // empty")
       TGT=$(echo "$ITEM" | jq -r ".data.targetSecret // empty")
 
       if [[ -z "$SRC" || -z "$TGT" ]]; then
-         echo "Skipping '$NAME': Missing source/target."
-         continue
+        echo "Skipping '$NAME': Missing source or target."
+        continue
       fi
 
-      echo "Syncing '$NAME': $SRC -> $TGT"
+      echo "• Syncing '$NAME': $SRC -> $TGT"
 
-      # 2. PARSE CONFIG
-      KEYS=$(echo "$ITEM" | jq -c '(.data // {}) | to_entries | map(select(.key | startswith("map."))) | map({key: .key | sub("map\\.";""), value: .value}) | from_entries' || echo "{}")
-      GEN_KEYS_LIST=$(echo "$ITEM" | jq -r '(.data // {}) | keys[] | select(startswith("gen.")) | sub("gen\\.";"")' || echo "")
+      KEYS=$(echo "$ITEM" | jq -c "$JQ_EXTRACT_MAP" || echo "{}")
+      GEN_LIST=$(echo "$ITEM" | jq -r "$JQ_EXTRACT_GEN" || echo "")
 
-      # 3. HANDLE GENERATORS
-      TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
+      # 3. GENERATE
       GEN_JSON="{}"
+      if [[ -n "$GEN_LIST" ]]; then
+        TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
 
-      if [[ -n "$GEN_KEYS_LIST" ]]; then
-        for key in $GEN_KEYS_LIST; do
-          EXISTING=""
-          if [[ -n "$TGT_JSON" ]]; then
-            EXISTING=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty')
-          fi
+        for key in $GEN_LIST; do
+          VAL=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty' 2>/dev/null || true)
 
-          if [[ -n "$EXISTING" ]]; then
-             VAL="$EXISTING"
-          else
-             # Safe Random Gen
-             RAW=$(head -c 512 /dev/urandom | LC_ALL=C tr -dc 'A-Za-z0-9' | head -c 32)
-             VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
+          if [[ -z "$VAL" ]]; then
+            RAW=$(head -c 512 /dev/urandom | LC_ALL=C tr -dc 'A-Za-z0-9' | head -c 32)
+            VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
           fi
           GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
         done
       fi
 
-      # 4. GET SOURCE
+      # 4. FETCH SOURCE
       SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
       if [[ -z "$SRC_JSON" ]]; then
-        echo "  Source '$SRC' missing. Waiting..."
+        echo "  > Source '$SRC' not found. Waiting..."
         continue
       fi
 
-      # 5. BUILD PROPOSED
-      PROPOSED=$(echo "$SRC_JSON" | jq -c --arg name "$TGT" \
-                           --arg ns "$NS" \
-                           --arg cm_name "$NAME" \
-                           --arg cm_uid "$CM_UID" \
-                           --argjson map "$KEYS" \
-                           --argjson gen "$GEN_JSON" '
-        .data = (.data // {}) |
-        .metadata = {
-          "name": $name,
-          "namespace": $ns,
-          "annotations": { "secret-sync.controller/managed": "true" },
-          "ownerReferences": [{
-             "apiVersion": "v1",
-             "kind": "ConfigMap",
-             "name": $cm_name,
-             "uid": $cm_uid,
-             "blockOwnerDeletion": true,
-             "controller": true
-          }]
-        } |
-        reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
-        reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
-        reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
-        .data |= with_entries(select(.value != null))
-      ')
+      # 5. BUILD & APPLY
+      PROPOSED=$(echo "$SRC_JSON" | jq -c \
+        --arg target "$TGT" \
+        --arg ns "$NS" \
+        --arg cm_name "$NAME" \
+        --arg cm_uid "$CM_UID" \
+        --argjson map "$KEYS" \
+        --argjson gen "$GEN_JSON" \
+        "$JQ_BUILD_PROPOSED"
+      )
 
-      # 6. APPLY
+      TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
+
       if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
-         echo "$PROPOSED" | kubectl apply -f -
-         echo "  Synced successfully."
+        echo "$PROPOSED" | kubectl apply -f -
+        echo "  > Synced successfully."
       else
-         echo "  No changes."
+        echo "  > No changes."
       fi
-    done
 
+    done
 ---
 apiVersion: batch/v1
 kind: CronJob
