--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -86,7 +86,6 @@ data:
     '
 
     NS="${CURRENT_NAMESPACE:-$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)}"
-    echo "--- Syncing Namespace: $NS ---"
 
     # 1. DISCOVER
     CONFIGS=$(kubectl get configmaps -n "$NS" -l secret-sync.controller/enabled=true -o json)
@@ -181,6 +180,11 @@ spec:
             - name: controller
               image: bitnami/kubectl:latest
               command: ["/bin/bash", "/scripts/sync.sh"]
+              env:
+                - name: CURRENT_NAMESPACE
+                  valueFrom:
+                    fieldRef:
+                      fieldPath: metadata.namespace
               resources:
                 requests:
                   cpu: 10m
