Test rewritten sckrip

--- a/k8s/apps/staging/capacitor/secret-remapper.yaml
+++ b/k8s/apps/staging/capacitor/secret-remapper.yaml
@@ -56,109 +56,192 @@ data:
   sync.sh: |
     #!/usr/bin/env bash
     set -euo pipefail
-    trap 'echo "Error on line $LINENO. Last command: $BASH_COMMAND"' ERR
 
-    JQ_EXTRACT_MAP='(.data // {}) | to_entries
+    trap 'error "Error on line $LINENO. Last command: $BASH_COMMAND"' ERR
+
+    readonly JQ_EXTRACT_MAPPINGS='(.data // {}) | to_entries
       | map(select(.key | startswith("map.")))
       | map({key: .key | sub("map\\.";""), value: .value})
       | from_entries'
 
-    JQ_EXTRACT_GEN='(.data // {}) | keys[]
+    readonly JQ_EXTRACT_GENERATORS='(.data // {}) | keys[]
       | select(startswith("gen."))
       | sub("gen\\.";"")'
 
-    JQ_BUILD_PROPOSED='
+    readonly JQ_BUILD_SECRET='
       .data = (.data // {}) |
       .metadata = {
         "name": $ARGS.named.target,
-        "namespace": $ARGS.named.ns,
-        "annotations": { "secret-sync.controller/managed": "true" },
+        "namespace": $ARGS.named.namespace,
+        "annotations": {
+          "secret-sync.controller/managed": "true"
+        },
         "ownerReferences": [{
-          "apiVersion": "v1", "kind": "ConfigMap",
-          "name": $ARGS.named.cm_name, "uid": $ARGS.named.cm_uid,
-          "blockOwnerDeletion": true, "controller": true
+          "apiVersion": "v1",
+          "kind": "ConfigMap",
+          "name": $ARGS.named.name,
+          "uid": $ARGS.named.uid,
+          "blockOwnerDeletion": true,
+          "controller": true
         }]
       } |
-      reduce ($map | to_entries[]) as $i (.; .data[$i.key] = .data[$i.value]) |
-      reduce ($gen | to_entries[]) as $i (.; .data[$i.key] = $i.value) |
-      reduce ($map | to_entries[]) as $i (.; if $i.key != $i.value then del(.data[$i.value]) else . end) |
+      reduce ($mappings | to_entries[]) as $item (.; .data[$item.key] = .data[$item.value]) |
+      reduce ($generators | to_entries[]) as $item (.; .data[$item.key] = $item.value) |
+      reduce ($mappings | to_entries[]) as $item (.; if $item.key != $item.value then del(.data[$item.value]) else . end) |
       .data |= with_entries(select(.value != null))
     '
 
-    NS="${CURRENT_NAMESPACE:-$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)}"
+    info() {
+      echo "$(date '+%Y-%m-%d %H:%M:%S') [INFO]  $1"
+    }
 
-    # 1. DISCOVER
-    CONFIGS=$(kubectl get configmaps -n "$NS" -l secret-sync.controller/enabled=true -o json)
-    COUNT=$(echo "$CONFIGS" | jq '.items | length')
+    warn() {
+      echo "$(date '+%Y-%m-%d %H:%M:%S') [WARN]  $1" >&2
+    }
 
-    if [[ "$COUNT" -eq 0 ]]; then
-      echo "No configurations found."
-      exit 0
-    fi
+    error() {
+      echo "$(date '+%Y-%m-%d %H:%M:%S') [ERROR] $1" >&2
+    }
 
-    # 2. PROCESS LOOP
-    for ((i=0; i<COUNT; i++)); do
-      ITEM=$(echo "$CONFIGS" | jq ".items[$i]")
+    check_dependencies() {
+      local dependencies=(jq kubectl openssl)
 
-      NAME=$(echo "$ITEM" | jq -r ".metadata.name")
-      CM_UID=$(echo "$ITEM" | jq -r ".metadata.uid")
-      SRC=$(echo "$ITEM" | jq -r ".data.sourceSecret // empty")
-      TGT=$(echo "$ITEM" | jq -r ".data.targetSecret // empty")
+      for dep in "${dependencies[@]}"; do
+        if ! command -v "$dep" &>/dev/null; then
+          error "'$dep' is required but not installed."
 
-      if [[ -z "$SRC" || -z "$TGT" ]]; then
-        echo "Skipping '$NAME': Missing source or target."
-        continue
-      fi
+          exit 1
+        fi
+      done
+    }
 
-      echo "• Syncing '$NAME': $SRC -> $TGT"
-
-      KEYS=$(echo "$ITEM" | jq -c "$JQ_EXTRACT_MAP" || echo "{}")
-      GEN_LIST=$(echo "$ITEM" | jq -r "$JQ_EXTRACT_GEN" || echo "")
-
-      # 3. GENERATE
-      GEN_JSON="{}"
-      if [[ -n "$GEN_LIST" ]]; then
-        TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
-
-        for key in $GEN_LIST; do
-          VAL=$(echo "$TGT_JSON" | jq -r --arg k "$key" '.data[$k] // empty' 2>/dev/null || true)
-
-          if [[ -z "$VAL" ]]; then
-            RAW=$(head -c 512 /dev/urandom | LC_ALL=C tr -dc 'A-Za-z0-9' | head -c 32)
-            VAL=$(echo -n "$RAW" | base64 | tr -d '\n')
-          fi
-          GEN_JSON=$(echo "$GEN_JSON" | jq -c --arg k "$key" --arg v "$VAL" '.[$k] = $v')
-        done
-      fi
-
-      # 4. FETCH SOURCE
-      SRC_JSON=$(kubectl get secret "$SRC" -n "$NS" -o json 2>/dev/null || true)
-      if [[ -z "$SRC_JSON" ]]; then
-        echo "  > Source '$SRC' not found. Waiting..."
-        continue
-      fi
-
-      # 5. BUILD & APPLY
-      PROPOSED=$(echo "$SRC_JSON" | jq -c \
-        --arg target "$TGT" \
-        --arg ns "$NS" \
-        --arg cm_name "$NAME" \
-        --arg cm_uid "$CM_UID" \
-        --argjson map "$KEYS" \
-        --argjson gen "$GEN_JSON" \
-        "$JQ_BUILD_PROPOSED"
-      )
-
-      TGT_JSON=$(kubectl get secret "$TGT" -n "$NS" -o json 2>/dev/null || true)
-
-      if [[ -z "$TGT_JSON" ]] || ! echo "$TGT_JSON" | jq -e --argjson new "$PROPOSED" '.data == $new.data' >/dev/null; then
-        echo "$PROPOSED" | kubectl apply -f -
-        echo "  > Synced successfully."
+    get_namespace() {
+      if [[ -n "${CURRENT_NAMESPACE:-}" ]]; then
+        echo "$CURRENT_NAMESPACE"
+      elif [[ -f /var/run/secrets/kubernetes.io/serviceaccount/namespace ]]; then
+        cat /var/run/secrets/kubernetes.io/serviceaccount/namespace
       else
-        echo "  > No changes."
+        echo "default"
+      fi
+    }
+
+    resolve_generators() {
+      local namespace="$1"
+      local target_secret="$2"
+      local generators="$3"
+
+      if [[ -z "$generators" ]]; then
+        echo "{}"
+
+        return
       fi
 
-    done
+      local generated="{}"
+      local target="$(kubectl get secret "$target_secret" -n "$namespace" -o json 2>/dev/null || echo "{}")"
+
+      for key in $generators; do
+        local value="$(echo "$target" | jq -r --arg key "$key" '.data[$key] // empty')"
+
+        if [[ -z "$value" ]]; then
+          value="$(openssl rand -base64 32 | tr -d '\n' | base64)"
+        fi
+
+        generated="$(echo "$generated" | jq -c --arg key "$key" --arg value "$value" '.[$key] = $value')"
+      done
+
+      echo "$generated"
+    }
+
+    apply_if_changed() {
+      local namespace="$1"
+      local target_secret="$2"
+      local new_secret="$3"
+
+      local current_secret="$(kubectl get secret "$target_secret" -n "$namespace" -o json 2>/dev/null || true)"
+
+      if [[ -n "$current_secret" ]]; then
+        if echo "$current_secret" | jq -e --argjson new_secret "$new_secret" '.data == $new_secret.data' &>/dev/null; then
+          info "No changes detected."
+
+          return 0
+        fi
+      fi
+
+      if echo "$new_secret" | kubectl apply -f - &>/dev/null; then
+        info "Synced successfully."
+      else
+        error "Failed to apply changes."
+
+        return 1
+      fi
+    }
+
+    process_item() {
+      local item="$1"
+      local namespace="$2"
+
+      local metadata="$(echo "$item" | jq -r '[.metadata.name, .metadata.uid, (.data.sourceSecret // ""), (.data.targetSecret // "")] | @tsv')"
+
+      local name uid src target
+      IFS=$'\t' read -r name uid src target <<<"$metadata"
+
+      if [[ -z "$src" || -z "$target" ]]; then
+        warn "Skipping '$name': Missing source or target definition."
+
+        return 0
+      fi
+
+      info "Syncing '$name': $src -> $target"
+
+      local source_secret
+      if ! source_secret="$(kubectl get secret "$src" -n "$namespace" -o json 2>/dev/null)"; then
+        warn "Source '$src' not found. Waiting..."
+
+        return 0
+      fi
+
+      local mappings="$(echo "$item" | jq -c "$JQ_EXTRACT_MAPPINGS" || echo "{}")"
+      local generators="$(echo "$item" | jq -r "$JQ_EXTRACT_GENERATORS" || echo "")"
+      local generated="$(resolve_generators "$namespace" "$target" "$generators")"
+
+      local new_secret="$(
+        echo "$source_secret" | jq -c \
+          --arg target "$target" \
+          --arg namespace "$namespace" \
+          --arg name "$name" \
+          --arg uid "$uid" \
+          --argjson mappings "$mappings" \
+          --argjson generators "$generated" \
+          "$JQ_BUILD_SECRET"
+      )"
+
+      apply_if_changed "$namespace" "$target" "$new_secret"
+    }
+
+    main() {
+      check_dependencies
+
+      local namespace="$(get_namespace)"
+
+      info "Starting discovery in namespace: $namespace"
+
+      local config_maps="$(kubectl get configmaps -n "$namespace" -l secret-sync.controller/enabled=true -o json | jq -c '.items[]')"
+
+      if [[ -z "$config_maps" ]]; then
+        info "No configurations found."
+
+        return 0
+      fi
+
+      local -a items
+      readarray -t items <<<"$config_maps"
+
+      for item in "${items[@]}"; do
+        process_item "$item" "$namespace"
+      done
+    }
+
+    main "$@"
 ---
 apiVersion: batch/v1
 kind: CronJob
