--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -9,6 +9,10 @@ metadata:
     fluxcd.controlplane.io/reconcileEvery: 30m
     fluxcd.controlplane.io/reconcileTimeout: 5m
 spec:
+  inputsFrom:
+    - apiVersion: fluxcd.controlplane.io/v1
+      kind: ResourceSetInputProvider
+      name: secret-composer-config
   resources:
     - apiVersion: v1
       kind: ServiceAccount
