--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -10,9 +10,10 @@ metadata:
     fluxcd.controlplane.io/reconcileTimeout: 5m
 spec:
   inputsFrom:
-    - apiVersion: fluxcd.controlplane.io/v1
-      kind: ResourceSetInputProvider
-      name: secret-composer-config
+    - kind: ResourceSetInputProvider
+      selector:
+        matchLabels:
+          secret-composer.controller/config: "true"
   resources:
     - apiVersion: v1
       kind: ServiceAccount
