--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -13,7 +13,7 @@ spec:
     - kind: ResourceSetInputProvider
       selector:
         matchLabels:
-          secret-composer.controller/config: "true"
+          secret-composer.controller/install: "true"
   resources:
     - apiVersion: v1
       kind: ServiceAccount
