Add secret-composer to capacitor

--- a/k8s/apps/staging/kustomization.yaml
+++ b/k8s/apps/staging/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - rancher/secrets.yaml
   - capacitor/auth.yaml
   - capacitor/secrets.yaml
+  - capacitor/secret-composer.yaml
 patches:
   - path: rancher/release.yaml
     target:
