--- a/k8s/apps/staging/capacitor/secret-composer.yaml
+++ b/k8s/apps/staging/capacitor/secret-composer.yaml
@@ -3,7 +3,7 @@ apiVersion: fluxcd.controlplane.io/v1
 kind: ResourceSetInputProvider
 metadata:
   name: capacitor-secret-composer
-  namespace: flux-system
+  namespace: utilities
   labels:
     secret-composer.controller/install: "true"
 spec:
