--- a/k8s/apps/staging/capacitor/secret-composer.yaml
+++ b/k8s/apps/staging/capacitor/secret-composer.yaml
@@ -10,7 +10,7 @@ spec:
   type: Static
   defaultValues:
     namespace: flux-system
-    cron-schedule: "* * * * *"
+    cron_schedule: "* * * * *"
 # ---
 # apiVersion: v1
 # kind: ConfigMap
