--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -257,7 +257,7 @@ spec:
         name: secret-composer-controller
         namespace: << inputs.namespace >>
       spec:
-        schedule: << inputs.cron-schedule >>
+        schedule: << inputs.cron_schedule >>
         successfulJobsHistoryLimit: 1
         failedJobsHistoryLimit: 1
         concurrencyPolicy: Forbid
