--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -242,10 +242,7 @@ spec:
               return 0
             fi
 
-            local -a items
-            readarray -t items <<<"$config_maps"
-
-            for item in "${items[@]}"; do
+            echo "$config_maps" | jq -c '.items[]' | while read -r item; do
               process_item "$item" "$namespace"
             done
           }
