--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -69,7 +69,7 @@ spec:
         name: secret-composer-controller
         namespace: << inputs.namespace >>
       spec:
-        schedule: << inputs.cron_schedule >>
+        schedule: << inputs.cron_schedule | quote >>
         successfulJobsHistoryLimit: 1
         failedJobsHistoryLimit: 1
         concurrencyPolicy: Forbid
