Add teh config for secret composer for capacitor

--- a/k8s/apps/staging/capacitor/secret-composer.yaml
+++ b/k8s/apps/staging/capacitor/secret-composer.yaml
@@ -11,19 +11,19 @@ spec:
   defaultValues:
     namespace: flux-system
     cron_schedule: "* * * * *"
-# ---
-# apiVersion: v1
-# kind: ConfigMap
-# metadata:
-#   name: oauth2-proxy-creds-secret-composer
-#   namespace: flux-system
-#   labels:
-#     secret-composer.controller/enabled: "true"
-# data:
-#   sourceSecret: capacitor-oidc-credentials
-#   targetSecret: oauth2-proxy-creds
-#
-#   map.client-id: client_id
-#   map.client-secret: client_secret
-#
-#   gen.cookie-secret: "true"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: oauth2-proxy-creds-secret-composer
+  namespace: flux-system
+  labels:
+    secret-composer.controller/enabled: "true"
+data:
+  sourceSecret: capacitor-oidc-credentials
+  targetSecret: oauth2-proxy-creds
+
+  map.client-id: client_id
+  map.client-secret: client_secret
+
+  gen.cookie-secret: "true"
