--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -290,7 +290,7 @@ data:
         return 0
       fi
 
-      echo "$config_maps" | jq -c '.items[]' | while read -r item; do
+      echo "$config_maps" | while read -r item; do
         process_item "$item" "$namespace"
       done
     }
