Update imagepull policy on cronjob

--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -82,6 +82,7 @@ spec:
                 containers:
                   - name: controller
                     image: bitnami/kubectl:latest
+                    imagePullPolicy: IfNotPresent
                     command: ["/bin/bash", "/scripts/secret-composer.sh"]
                     env:
                       - name: CURRENT_NAMESPACE
