--- a/k8s/apps/base/utilities/secret-composer.yaml
+++ b/k8s/apps/base/utilities/secret-composer.yaml
@@ -62,7 +62,7 @@ spec:
         name: secret-composer-script
         namespace: << inputs.namespace >>
         annotations:
-          fluxcd.controlplane.io/copyFrom: "utilities/secret-composer-script"
+          fluxcd.controlplane.io/copyFrom: utilities/secret-composer-script
     - apiVersion: batch/v1
       kind: CronJob
       metadata:
