update redis for oauth2-proxy config

--- a/k8s/apps/base/utilities/oauth2-proxy.yaml
+++ b/k8s/apps/base/utilities/oauth2-proxy.yaml
@@ -114,3 +114,9 @@ spec:
                   - << inputs.host >>
           redis-ha:
             enabled: true
+            replicas: 1
+            redis:
+              config:
+                min-replicas-to-write: 0
+            persistentVolume:
+              enabled: false
